adds databricks connection